--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.166.1/containers/dotnet-mssql
 {
-	"name": "C# (.NET) and MS SQL",
+	"name": "Universal and MS SQL",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspace",
@@ -29,6 +29,8 @@
 		"ms-mssql.mssql",
 		"ms-azuretools.vscode-docker"
 	],
+
+	"remoteUser": "codespace",
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [5000, 5001],
