--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,18 +5,20 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-      args:
-        # [Choice] Update 'VARIANT' to pick a .NET Core version: 2.1, 3.1, 5.0
-        VARIANT: 3.1
-        # Options
-        INSTALL_NODE: "false"
-        NODE_VERSION: "lts/*"
-        INSTALL_AZURE_CLI: "false"
-        # On Linux, you may need to update USER_UID and USER_GID below if not your local UID is not 1000.
-        USER_UID: 1000
-        USER_GID: 1000
+      # args:
+      #   # [Choice] Update 'VARIANT' to pick a .NET Core version: 2.1, 3.1, 5.0
+      #   VARIANT: 3.1
+      #   # Options
+      #   INSTALL_NODE: "false"
+      #   NODE_VERSION: "lts/*"
+      #   INSTALL_AZURE_CLI: "false"
+      #   # On Linux, you may need to update USER_UID and USER_GID below if not your local UID is not 1000.
+      #   USER_UID: 1000
+      #   USER_GID: 1000
 
     init: true
+    privileged: true
+    security_opt: true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ..:/workspace:cached
