--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,29 +5,25 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-      # args:
-      #   # [Choice] Update 'VARIANT' to pick a .NET Core version: 2.1, 3.1, 5.0
-      #   VARIANT: 3.1
-      #   # Options
-      #   INSTALL_NODE: "false"
-      #   NODE_VERSION: "lts/*"
-      #   INSTALL_AZURE_CLI: "false"
-      #   # On Linux, you may need to update USER_UID and USER_GID below if not your local UID is not 1000.
-      #   USER_UID: 1000
-      #   USER_GID: 1000
+      args:
+        # [Choice] Update 'VARIANT' to pick a .NET Core version: 2.1, 3.1, 5.0
+        VARIANT: 3.1
+        # Options
+        INSTALL_NODE: "false"
+        NODE_VERSION: "lts/*"
+        INSTALL_AZURE_CLI: "false"
+        # On Linux, you may need to update USER_UID and USER_GID below if not your local UID is not 1000.
+        USER_UID: 1000
+        USER_GID: 1000
 
-    init: true
-    privileged: true
-    security_opt: true
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
       - ..:/workspace:cached
       
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: host
+    network_mode: service:db
 
     # Uncomment the next line to use a non-root user for all processes.
     # user: vscode
@@ -41,7 +37,6 @@ services:
     environment:
       SA_PASSWORD: P@ssw0rd
       ACCEPT_EULA: Y
-    network_mode: host
 
     # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
