--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         USER_GID: 1000
 
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - ..:/workspace:cached
       
     # Overrides default command so things don't shut down after the process ends.
