--- a/.devcontainer/Universal/devcontainer.json
+++ b/.devcontainer/Universal/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/universal
 {
-	"name": "Default Linux Universal with SQL Server",
+	"name": "Universal with SQL Server",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
@@ -17,7 +17,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "docker --version && echo .Net $(dotnet --version) && python3 --version && echo SQLTools $(sqlcmd -? | awk 'NR==2') && sqlcmd -S db -U SA -P P@ssw0rd -Q 'SELECT @@VERSION' || true",
+	"postCreateCommand": ".devcontainer/scripts/check-features.sh",
 
 	// Configure tool-specific properties.
 	"customizations": {
