--- a/.devcontainer/Ubuntu/devcontainer.json
+++ b/.devcontainer/Ubuntu/devcontainer.json
@@ -42,6 +42,23 @@
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
+			// Set *default* container specific settings.json values on container create.
+			"settings": {
+				"mssql.connections": [
+					{
+						"server": "localhost,1433",
+						"database": "",
+						"authenticationType": "SqlLogin",
+						"user": "sa",
+						"password": "P@ssw0rd",
+						"emptyPasswordInput": false,
+						"savePassword": true,
+						"trustServerCertificate": true,
+						"profileName": "local-container"
+					}
+				]
+			},
+						
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"ms-python.python",
