update prebuild workflow to use 'filter' for push and add event filter for push events

--- a/.github/workflows/prebuild-devcontainers.yml
+++ b/.github/workflows/prebuild-devcontainers.yml
@@ -46,4 +46,5 @@ jobs:
           configFile: .devcontainer/${{ matrix.devcontainer }}/devcontainer.json
           imageName: ghcr.io/${{ github.repository }}/devcontainer-${{ matrix.devcontainer }}
           cacheFrom: ghcr.io/${{ github.repository }}/devcontainer-${{ matrix.devcontainer }}
-          push: ${{ github.event_name != 'pull_request' }}
+          push: filter
+          eventFilterForPush: push
