--- a/.github/workflows/prebuild-devcontainers.yml
+++ b/.github/workflows/prebuild-devcontainers.yml
@@ -40,6 +40,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set lowercase variables
+        id: lowercase
+        run: |
+          echo "devcontainer=$(echo '${{ matrix.devcontainer }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+          echo "repository=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Pre-build dev container image
         uses: devcontainers/ci@v0.3
         with:
