fix: specify devcontainer path in codespace creation command

--- a/.github/workflows/test-permissions.yml
+++ b/.github/workflows/test-permissions.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GITHUB_REPO: markpatterson27/devcontainer-tests
         run: |
-          gh codespace create --repo $GITHUB_REPO --machine standardLinux32gb --devcontainer-path .devcontainer/Ubuntu
+          gh codespace create --repo $GITHUB_REPO --machine standardLinux32gb --devcontainer-path .devcontainer/Ubuntu/devcontainer.json
 
       - name: List codespaces after creation
         run: gh codespace list
