--- a/.devcontainer/Ubuntu-prebuilt/devcontainer.json
+++ b/.devcontainer/Ubuntu-prebuilt/devcontainer.json
@@ -6,7 +6,7 @@
 	"shutdownAction": "stopCompose",
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": ".devcontainer/scripts/check-features.sh",
+	"postCreateCommand": ".devcontainer/scripts/check-features.sh && .devcontainer/scripts/write-timestamp.sh",
 
 	// Configure tool-specific properties.
 	"customizations": {
