fix: correct script path in codespace measure step of permissions test workflow

--- a/.github/workflows/test-permissions.yml
+++ b/.github/workflows/test-permissions.yml
@@ -42,4 +42,4 @@ jobs:
           CODESPACE_MACHINE: standardLinux32gb
           ITERATIONS: 5
         run: |
-          ./github/scripts/measure-codespace.sh
+          ./.github/scripts/measure-codespace.sh
