feat: add SSH feature to Debian devcontainer configuration

--- a/.devcontainer/Debian/devcontainer.json
+++ b/.devcontainer/Debian/devcontainer.json
@@ -15,6 +15,9 @@
 		// 	"version": "latest",
 		// 	"bicepVersion": "latest"
 		// },
+		"ghcr.io/devcontainers/features/sshd:1": {
+			"version": "latest"
+		},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {
 			"moby": true,
 			"azureDnsAutoDetection": true,
