--- a/.devcontainer/Debian/devcontainer.json
+++ b/.devcontainer/Debian/devcontainer.json
@@ -37,10 +37,18 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [8080],
+	"portsAttributes": {
+		"8080": {
+			"label": "postCreate timestamp",
+			"onAutoForward": "openBrowser",
+			"visibility": "public"
+		}
+	},
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": ".devcontainer/scripts/check-features.sh && .devcontainer/scripts/write-timestamp.sh",
+	"postStartCommand": "python3 -m http.server 8080 --bind 0.0.0.0 --directory /workspaces/${GITHUB_REPOSITORY##*/} &>/tmp/postcreate-server.log &",
 
 	// Configure tool-specific properties.
 	"customizations": {
