fix: change port forwarding behavior to ignore auto-open browser

--- a/.devcontainer/Debian/devcontainer.json
+++ b/.devcontainer/Debian/devcontainer.json
@@ -41,8 +41,9 @@
 	"portsAttributes": {
 		"8080": {
 			"label": "postCreate timestamp",
-			"onAutoForward": "openBrowser",
-			"visibility": "public"
+			"onAutoForward": "ignore",
+			"protocol": "http"
+			// "visibility": "public"
 		}
 	},
 
