--- a/.devcontainer/Debian/devcontainer.json
+++ b/.devcontainer/Debian/devcontainer.json
@@ -37,7 +37,7 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [8080],
+	// "forwardPorts": [8080],
 	"portsAttributes": {
 		"8080": {
 			"label": "postCreate timestamp",
