--- a/.devcontainer/Debian/devcontainer.json
+++ b/.devcontainer/Debian/devcontainer.json
@@ -37,7 +37,7 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [8080],
+	"forwardPorts": [8080],
 	"portsAttributes": {
 		"8080": {
 			"label": "postCreate timestamp",
@@ -49,7 +49,7 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": ".devcontainer/scripts/check-features.sh && .devcontainer/scripts/write-timestamp.sh",
-	"postStartCommand": "python3 -m http.server 8080 --bind 0.0.0.0 --directory /workspaces/${GITHUB_REPOSITORY##*/}/.measure &> /tmp/postcreate-server.log &",
+	"postStartCommand": "python3 -m http.server 8080 --bind 0.0.0.0 --directory /workspaces/${GITHUB_REPOSITORY##*/}/.measure &> /tmp/postcreate-server.log",
 
 	// Configure tool-specific properties.
 	"customizations": {
