--- a/.devcontainer/Debian/devcontainer.json
+++ b/.devcontainer/Debian/devcontainer.json
@@ -49,7 +49,7 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": ".devcontainer/scripts/check-features.sh && .devcontainer/scripts/write-timestamp.sh",
-	"postStartCommand": "nohup bash -c 'python3 -m http.server 8080 --bind 0.0.0.0 --directory /workspaces/${GITHUB_REPOSITORY##*/}/.measure &> /tmp/postcreate-server.log &'",
+	"postStartCommand": "nohup bash -c 'python3 -m http.server 8080 --bind 0.0.0.0 --directory /workspaces/devcontainer-tests/.measure &> /tmp/postcreate-server.log &'",
 
 	// Configure tool-specific properties.
 	"customizations": {
